--- a/greenly/src/app/components/home/home.component.css
+++ b/greenly/src/app/components/home/home.component.css
@@ -47,3 +47,7 @@ h4::before{
     border: 1px solid #177E39;
     box-shadow: 0 0 10px #81E084;
 }
+.accordion-button:not(.collapsed) {
+    background-color: #4CAF50 !important; 
+    color: white; 
+  }
