--- a/greenly/src/app/components/navbar/navbar.component.html
+++ b/greenly/src/app/components/navbar/navbar.component.html
@@ -35,9 +35,6 @@
           <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/blog"
             routerLinkActive="active-link">Blog</a>
         </li>
-        <li class="nav-item px-2">
-          <a class="nav-link cursor-pointer fw-bold">Contact Us</a>
-        </li>
       </ul>
       @if(_AuthService.isLoggedIn()) {
       <button class="btn-special rounded-3 px-3 py-1 rounded-5" type="button" routerLink="/app/user/user-profile"><img
@@ -47,8 +44,7 @@
         <span class="bg-main position-absolute cart-counter">{{cartCounter}}</span>
         <img src="./assets/cart-plus-svgrepo-com.svg" width="30px" height="30px" />Cart
       </button>
-      <button class="btn btn-success rounded-3 px-3" type="button" routerLink="/app/system/home" (click)="logOut()">Log
-        Out<img src="./assets/logout-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
+      <button class="btn btn-success rounded-3 px-3" type="button" (click)="logOut()">Log Out<img src="./assets/logout-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
       }@else{
       <div class="nav-buttons me-4">
         <button class="btn btn-success rounded-3 px-3 py-1" type="button" routerLink="/app/system/login">Log In <img
