some finishes on the user side

--- a/greenly/src/app/components/reset-password/reset-password.component.html
+++ b/greenly/src/app/components/reset-password/reset-password.component.html
@@ -18,15 +18,14 @@
                                 </div>
                             }
                         <label for="confirmPassword" class="form-label">Confirm Password</label>
-                        <input  type="confirmPassword" class="mb-3 form-control" id="confirmPassword" placeholder="name@example.com"
+                        <input  type="password" class="mb-3 form-control" id="confirmPassword" placeholder="name@example.com"
                             formControlName="confirmPassword">
                             @if (recoveryForm.getError("missMatch") && recoveryForm.get("confirmPassword")?.touched) {
                                 <div class="alert alert-warning p-2 fs-6 fw-bold rounded-2 mt-2">
                                     <p class="m-0">Passwords don't match</p>
                                 </div>  
                             }
-                        <button class="btn btn-success rounded-4 d-block w-100"
-                            routerLink="/app/system/confirm-code">Update</button>
+                        <button class="btn btn-success rounded-4 d-block w-100">Update</button>
                     </div>
                 </form>
             </div>
