--- a/greenly/src/app/components/favorites/favorites.component.html
+++ b/greenly/src/app/components/favorites/favorites.component.html
@@ -17,21 +17,32 @@
                                     <div class="top-content d-flex justify-content-between align-items-center my-2">
                                         <h3 class="card-title special-font">{{product.productId.name}}</h3>
                                         <div>
-                                            <span class="special-font fs-3 px-2 text-secondary"><del>{{product.productId.price}}</del></span>
-                                            <span class="special-font fs-3">{{product.productId.price}}</span>
-                                        </div>
+                                            <span class="special-font fs-3">{{ product.productId.price| currency : "GBP" }}</span>
+                                          </div>
                                     </div>
                                     <p class="card-text fw-semibold">{{product.productId.shortdescription}}</p>
-                                    <div class="bottom-content d-flex justify-content-between align-items-center mt-4">
-                                        <span class="text-warning fw-semibold"><i
-                                                class="fa-solid fa-circle-exclamation"></i>
-                                            Only
-                                            <span class="text-black">{{product.productId.stock}}</span> left in stock</span>
-                                        <span class="special-font fs-3 text-main cart-holder rounded-3 cursor-pointer">
-                                            <img src="./assets/cart-plus-svgrepo-com.svg" alt="cart-icon" class="cart-icon"
-                                                width="35px" height="35px" fill="#177E39">
+                                    <div class="d-flex justify-content-between align-items-center p-3">
+                                        <div>
+                                          @if(product.productId.stock < 5){
+                                            <span class="text-warning fw-semibold">
+                                              <i class="fa-solid fa-circle-exclamation"></i> Only
+                                              <span class="text-black">{{product.productId.stock}}</span> left in stock
+                                            </span>
+                                          }@else {
+                                            <span>
+                                              <img src="./assets/box-svgrepo-com.svg" alt="box-img" class="me-1" width="24px" height="24px">
+                                            </span>
+                                            <span class="text-secondary fw-semibold">
+                                              <span class="text-black">In stock : {{product.productId.stock}}</span>
+                                            </span>
+                                          }
+                                        </div>
+                                        <span class="special-font fs-3 text-main cart-holder rounded-3 cursor-pointer"
+                                          (click)="addProductToCart(product.productId._id)">
+                                          <img src="./assets/cart-plus-svgrepo-com.svg" alt="cart-icon" class="cart-icon" width="35px"
+                                            height="35px" fill="#177E39">
                                         </span>
-                                    </div>
+                                      </div>
                                 </div>
                                 </div>
                             </div>
