--- a/greenly/src/app/components/shop/shop.component.html
+++ b/greenly/src/app/components/shop/shop.component.html
@@ -33,20 +33,28 @@
                   <div class="top-content d-flex justify-content-between align-items-center my-2">
                     <h3 class="card-title special-font">{{ product.name }}</h3>
                     <div>
-                      <span class="special-font fs-3 px-2 text-secondary">
-                        <del class="deleted-price">{{ product.price | currency : "GBP" }}</del>
-                      </span>
                       <span class="special-font fs-3">{{ product.price | currency : "GBP" }}</span>
                     </div>
                   </div>
                   <p class="card-text fw-semibold">{{ product.shortdescription }}</p>
-                  <span class="text-warning fw-semibold">
-                    <i class="fa-solid fa-circle-exclamation"></i> Only
-                    <span class="text-black">{{ product.stock }}</span> left in stock
-                  </span>
                 </div>
               </div>
-              <div class="d-flex justify-content-end p-3">
+              <div class="d-flex justify-content-between align-items-center p-3">
+                <div>
+                  @if(product.stock < 5){
+                    <span class="text-warning fw-semibold">
+                      <i class="fa-solid fa-circle-exclamation"></i> Only
+                      <span class="text-black">{{ product.stock }}</span> left in stock
+                    </span>
+                  }@else {
+                    <span>
+                      <img src="./assets/box-svgrepo-com.svg" alt="box-img" class="me-1" width="24px" height="24px">
+                    </span>
+                    <span class="text-secondary fw-semibold">
+                      <span class="text-black">In stock : {{ product.stock }}</span>
+                    </span>
+                  }
+                </div>
                 <span class="special-font fs-3 text-main cart-holder rounded-3 cursor-pointer"
                   (click)="addProductToCart(product._id)">
                   <img src="./assets/cart-plus-svgrepo-com.svg" alt="cart-icon" class="cart-icon" width="35px"
