--- a/greenly/src/app/components/home/home.component.html
+++ b/greenly/src/app/components/home/home.component.html
@@ -27,7 +27,7 @@
                                 come.
                             </p>
                         </div>
-                        <img src="./assets/hero-image.png" alt="Slide 1" class="w-100" />
+                        <img src="./assets/roy-luthfi-dhayugantara-D-oAUO46-9c-unsplash.jpg" alt="Slide 1" class="w-100" />
                     </ng-template>
                     <ng-template carouselSlide class="position-relative">
                         <div class="img-text position-absolute top-50 start-50 translate-middle text-white w-100">
@@ -40,7 +40,7 @@
                                 come.
                             </p>
                         </div>
-                        <img src="./assets/hero-image.png" alt="Slide 1" class="w-100" />
+                        <img src="./assets/walter-martin-CCbZ-DYDWiY-unsplash.jpg" alt="Slide 1" class="w-100" />
                     </ng-template>
                 </owl-carousel-o>
             </div>
