--- a/greenly/src/app/components/apiary-licence/apiary-licence.component.html
+++ b/greenly/src/app/components/apiary-licence/apiary-licence.component.html
@@ -1,83 +1,92 @@
 <section>
-    <div class="container py-5">
-      <h1 class="special-font text-center mb-3">Apiary licence Application</h1>
-      <form [formGroup]="apiaryForm" (ngSubmit)="onSubmit()">
-        <h4 class="special-font text-main position-relative fs-5">Personal Information</h4>
-        <div class="row mb-4 justify-content-center">
-          <div class="col-md-6 mb-3">
-            <label class="form-label special-font fs-4">Full Name</label>
-            <input type="text" class="form-control border-success" formControlName="fullName" placeholder="Seif Muhammed" />
-          </div>
-          <div class="col-md-6 mb-3">
-            <label class="form-label special-font fs-4">Phone Number</label>
-            <input type="tel" class="form-control border-success" formControlName="phoneNumber" placeholder="+20..." />
-          </div>
-          <div class="col-md-6 mb-3">
-            <label class="form-label special-font fs-4">Email</label>
-            <input type="email" class="form-control border-success" formControlName="email" placeholder="seif@xyz.com" />
-          </div>
-          <div class="col-md-6 mb-3">
-            <label class="form-label special-font fs-4">Address</label>
-            <input type="text" class="form-control border-success" formControlName="address" placeholder="221B Baker Street" />
-          </div>
-          <div class="col-md-6 mb-3">
-            <label class="form-label special-font fs-4">Experience in beekeeping <span class="text-secondary">in years</span></label>
-            <input type="number" class="form-control border-success" formControlName="experience" placeholder="1" />
+  <div class="container py-5">
+    <h1 class="special-font text-center mb-3">Apiary licence Application</h1>
+    <form [formGroup]="apiaryForm" (ngSubmit)="onSubmit()">
+      <h4 class="special-font text-main position-relative fs-5">Personal Information</h4>
+      <div class="row mb-4 justify-content-center">
+        <div class="col-md-6 mb-3">
+          <label class="form-label special-font fs-4">Full Name</label>
+          <input type="text" class="form-control border-success" formControlName="fullName"
+            placeholder="Seif Muhammed" />
+        </div>
+        <div class="col-md-6 mb-3">
+          <label class="form-label special-font fs-4">Phone Number</label>
+          <input type="tel" class="form-control border-success" formControlName="phoneNumber" placeholder="+20..." />
+        </div>
+        <div class="col-md-6 mb-3">
+          <label class="form-label special-font fs-4">Email</label>
+          <input type="email" class="form-control border-success" formControlName="email" placeholder="seif@xyz.com" />
+        </div>
+        <div class="col-md-6 mb-3">
+          <label class="form-label special-font fs-4">Address</label>
+          <input type="text" class="form-control border-success" formControlName="address"
+            placeholder="221B Baker Street" />
+        </div>
+        <div class="col-md-6 mb-3">
+          <label class="form-label special-font fs-4">Experience in beekeeping <span class="text-secondary">in
+              years</span></label>
+          <input type="number" class="form-control border-success" formControlName="experience" placeholder="1" />
+        </div>
+      </div>
+
+      <h4 class="special-font text-main position-relative fs-5">Apiary Licence Information</h4>
+      <div class="row justify-content-center mb-3">
+        <div class="col-md-4 mb-3">
+          <label class="form-label special-font fs-4">Required Area <span class="text-secondary">in meter
+              square</span></label>
+          <input type="number" class="form-control border-success" formControlName="requiredArea" placeholder="3000" />
+        </div>
+        <div class="col-md-4 mb-3">
+          <label class="form-label special-font fs-4">Required Location</label>
+          <input type="text" class="form-control border-success" formControlName="requiredLocation"
+            placeholder="Giza, Egypt" />
+        </div>
+        <div class="col-md-4 mb-3">
+          <label class="form-label special-font fs-4">Surrounding plants type</label>
+          <select class="form-select border-success" formControlName="plantsType"
+            aria-label="Select surrounding plants type">
+            <option disabled>Select plant type</option>
+            <option value="Flowering Trees">Flowering Trees</option>
+            <option value="Herbs">Herbs</option>
+            <option value="Fruit Trees">Fruit Trees</option>
+            <option value="Wild Plants">Wild Plants</option>
+          </select>
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <label class="form-label special-font fs-4">Number of planned bee colonies</label>
+          <input type="number" class="form-control border-success" formControlName="numberOfColonies"
+            placeholder="20000" />
+        </div>
+        <div class="col-md-12 mb-3">
+          <label class="form-label special-font fs-4">Proposed work plan <span class="text-secondary">3000 characters
+              maximum</span></label>
+          <textarea class="form-control border-success" rows="5" formControlName="workPlan"
+            placeholder="Write your plan here..."></textarea>
+          <div class="text-end mt-1">
+            <small class="text-muted">
+              <span class="text-danger">{{ charactersLeft }}</span> characters left
+            </small>
           </div>
         </div>
-  
-        <h4 class="special-font text-main position-relative fs-5">Apiary Licence Information</h4>
-        <div class="row justify-content-center mb-3">
-          <div class="col-md-4 mb-3">
-            <label class="form-label special-font fs-4">Required Area <span class="text-secondary">in meter square</span></label>
-            <input type="number" class="form-control border-success" formControlName="requiredArea" placeholder="3000" />
-          </div>
-          <div class="col-md-4 mb-3">
-            <label class="form-label special-font fs-4">Required Location</label>
-            <input type="text" class="form-control border-success" formControlName="requiredLocation" placeholder="Giza, Egypt" />
-          </div>
-          <div class="col-md-4 mb-3">
-            <label class="form-label special-font fs-4">Surrounding plants type</label>
-            <select class="form-select border-success" formControlName="plantsType" aria-label="Select surrounding plants type">
-              <option disabled>Select plant type</option>
-              <option value="Flowering Trees">Flowering Trees</option>
-              <option value="Herbs">Herbs</option>
-              <option value="Fruit Trees">Fruit Trees</option>
-              <option value="Wild Plants">Wild Plants</option>
-            </select>
-          </div>
-          
-          <div class="col-md-4 mb-3">
-            <label class="form-label special-font fs-4">Number of planned bee colonies</label>
-            <input type="number" class="form-control border-success" formControlName="numberOfColonies" placeholder="20000" />
-          </div>
-          <div class="col-md-12 mb-3">
-            <label class="form-label special-font fs-4">Proposed work plan <span class="text-secondary">1500 characters maximum</span></label>
-            <textarea class="form-control border-success"
-                      rows="5"
-                      formControlName="workPlan"
-                      (input)="charactersLeft"
-                      placeholder=""></textarea>
-            <div class="text-end mt-1">
-              <small class="text-muted"><span class="text-danger">{{ charactersLeft }}</span> characters left</small>
-            </div>
-          </div>
+      </div>
+
+      <h4 class="special-font text-main position-relative fs-5">Required Documents</h4>
+      <div class="row">
+        <div class="col-md-6 mb-3">
+          <label class="form-label special-font fs-4">National ID / Passport</label>
+          <input type="file" class="file form-control border-success bg-light"
+            (change)="onFileChange($event, 'nationalId')" />
         </div>
-  
-        <h4 class="special-font text-main position-relative fs-5">Required Documents</h4>
-        <div class="row">
-          <div class="col-md-6 mb-3">
-            <label class="form-label special-font fs-4">National ID / Passport</label>
-            <input type="file" class="file form-control border-success bg-light" (change)="onFileChange($event, 'nationalId')" />
-          </div>
-          <div class="col-md-6 mb-3">
-            <label class="form-label special-font fs-4">Beekeeping Experience Documents</label>
-            <input type="file" class="file form-control border-success bg-light" (change)="onFileChange($event, 'documents')" />
-          </div>
+        <div class="col-md-6 mb-3">
+          <label class="form-label special-font fs-4">Beekeeping Experience Documents</label>
+          <input type="file" class="file form-control border-success bg-light"
+            (change)="onFileChange($event, 'documents')" />
         </div>
-  
-        <button type="submit" class="btn btn-success w-25 d-block px-3 py-2 mx-auto my-5" [disabled]="apiaryForm.invalid">Apply</button>
-      </form>
-    </div>
-  </section>
-  
+      </div>
+
+      <button type="submit" class="btn btn-success w-25 d-block px-3 py-2 mx-auto my-5"
+        [disabled]="apiaryForm.invalid">Apply</button>
+    </form>
+  </div>
+</section>
