--- a/greenly/src/app/core/layouts/admin/admin.component.html
+++ b/greenly/src/app/core/layouts/admin/admin.component.html
@@ -1,2 +1,7 @@
 <app-admin-navbar></app-admin-navbar>
-<router-outlet></router-outlet>
+
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
+
+<app-footer></app-footer>
