--- a/greenly/src/app/components/home-admin/home-admin.component.html
+++ b/greenly/src/app/components/home-admin/home-admin.component.html
@@ -1,46 +1,1 @@
-<section class="my-3">
-    <div class="container">
-        <div class="my-4">
-            <h2 class="text-center special-font">Manage Requests</h2>
-            <div class="row justify-content-center mt-3">
-                <div class="col-md-4 req-item rounded-4 px-3 py-4 cursor-pointer" routerLink="/admin/manage-licences">
-                    <div class="mb-5">
-                        <img src="./assets/dollar-finance-money-4-svgrepo-com.svg" alt="loan" width="75px"
-                            height="75px">
-                    </div>
-                    <h3 class="special-font">Loan Requests</h3>
-                    <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eum, necessitatibus tempore, quo odio sed eveniet voluptas aliquid error ipsa velit at, vero nostrum consectetur voluptates! Modi magni laboriosam dolores.</p>
-                </div>
-                <div class="col-md-4 req-item rounded-4 px-3 py-4 cursor-pointer" routerLink="/admin/manage-loans">
-                    <div class="mb-5">
-                        <img src="./assets/honey-svgrepo-com.svg" alt="loan" width="75px"
-                            height="75px">
-                    </div>
-                    <h3 class="special-font">Loan Requests</h3>
-                    <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eum, necessitatibus tempore, quo odio sed eveniet voluptas aliquid error ipsa velit at, vero nostrum consectetur voluptates! Modi magni laboriosam dolores.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="my-3">
-    <div class="container">
-        <div class="my-4">
-            <h2 class="text-center special-font">Manage Products</h2>
-            <div class="row justify-content-center align-items-start mt-3">
-                <div class="col-md-4 req-item item-1 rounded-4 p-3 cursor-pointer" routerLink="/admin/add-product">
-                    <div class="mb-2 circle">
-                        <span class="icon"><i class="fa-solid fa-plus"></i></span>
-                    </div>
-                    <h3 class="special-font">Add new product</h3>
-                </div>
-                <div class="col-md-4 req-item item-2 rounded-4 p-3 cursor-pointer" routerLink="/admin/edit-product">
-                    <div class="mb-2">
-                        <span class="icon"><i class="fa-solid fa-pen-to-square"></i></span>
-                    </div>
-                    <h3 class="special-font">Edit Products</h3>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+<p>home-admin works!</p>
