--- a/greenly/src/app/components/edit-product/edit-product.component.html
+++ b/greenly/src/app/components/edit-product/edit-product.component.html
@@ -1,1 +1,29 @@
-<p>edit-product works!</p>
+<section>
+    <div class="container my-2">
+        <h1 class="special-font text-center">Products</h1>
+        <button class="btn my-btn text-white special-font fs-5 d-block ms-auto px-5 py-2 rounded-5" routerLink="/admin/add-product">Add Product</button>
+        <div class="row gy-4 mt-3 mb-5">
+            @for (product of productsData; track product._id) {
+                <div class="col-md-4">
+                <div class="inner p-3 rounded-3">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex justify-content-center align-items-center gap-1">
+                            <div>
+                                <img [src]="product.imageCover" [alt]="product.name">
+                            </div>
+                            <h2 class="special-font fs-5 pt-2">{{product.name}}</h2>
+                        </div>
+                        <span class="text-secondary small">{{product.createdAt | date }}</span>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center mt-3">
+                        <button
+                            class="btn btn-danger text-white special-font d-block w-35 py-2 rounded-5 me-5" (click)="deleteProduct(product._id)">Delete</button>
+                        <button
+                            class="btn btn-secondary text-white special-font d-block w-35 py-2 rounded-5" [routerLink]="['/admin/edit-specific-product', product._id]">Edit</button>
+                    </div>
+                </div>
+            </div>
+            }
+        </div>
+    </div>
+</section>
