workin on managing licences

--- a/greenly/src/app/components/home-admin/home-admin.component.html
+++ b/greenly/src/app/components/home-admin/home-admin.component.html
@@ -3,7 +3,7 @@
         <div class="my-4">
             <h2 class="text-center special-font">Manage Requests</h2>
             <div class="row justify-content-center mt-3">
-                <div class="col-md-4 req-item rounded-4 px-3 py-4 cursor-pointer" routerLink="/admin/manage-licences">
+                <div class="col-md-4 req-item rounded-4 px-3 py-4 cursor-pointer" routerLink="/admin/manage-loans">
                     <div class="mb-5">
                         <img src="./assets/dollar-finance-money-4-svgrepo-com.svg" alt="loan" width="75px"
                             height="75px">
@@ -11,12 +11,12 @@
                     <h3 class="special-font">Loan Requests</h3>
                     <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eum, necessitatibus tempore, quo odio sed eveniet voluptas aliquid error ipsa velit at, vero nostrum consectetur voluptates! Modi magni laboriosam dolores.</p>
                 </div>
-                <div class="col-md-4 req-item rounded-4 px-3 py-4 cursor-pointer" routerLink="/admin/manage-loans">
+                <div class="col-md-4 req-item rounded-4 px-3 py-4 cursor-pointer" routerLink="/admin/manage-licences">
                     <div class="mb-5">
                         <img src="./assets/honey-svgrepo-com.svg" alt="loan" width="75px"
                             height="75px">
                     </div>
-                    <h3 class="special-font">Loan Requests</h3>
+                    <h3 class="special-font">Licence Requests</h3>
                     <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eum, necessitatibus tempore, quo odio sed eveniet voluptas aliquid error ipsa velit at, vero nostrum consectetur voluptates! Modi magni laboriosam dolores.</p>
                 </div>
             </div>
