--- a/greenly/src/app/components/manage-licences/manage-licences.component.html
+++ b/greenly/src/app/components/manage-licences/manage-licences.component.html
@@ -1,1 +1,27 @@
-<p>manage-licences works!</p>
+<section>
+    <div class="container my-2">
+        <h1 class="special-font text-center">Manage licence requests</h1>
+        <div class="row gy-4 mt-3 mb-5">
+            @for (licence of licencesData; track licence._id) {
+            <div class="col-md-4">
+                <div class="inner p-3 rounded-3">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex justify-content-center align-items-center gap-1">
+                            <div>
+                                <img src="./assets/user-circle-1-svgrepo-com.svg" [alt]="licence.fullName" width="50px"
+                                    height="50px">
+                            </div>
+                            <h2 class="special-font fs-5 pt-2">{{licence.fullName.toUpperCase()}}</h2>
+                        </div>
+                        <span class="text-secondary small">{{licence.createdAt | date }}</span>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center mt-3">
+                        <button class="btn btn-success text-white special-font d-block w-50 py-2 rounded-5"
+                            [routerLink]="['/admin/manage-specific-licence', licence._id]">View Details</button>
+                    </div>
+                </div>
+            </div>
+            }
+        </div>
+    </div>
+</section>
