--- a/greenly/src/app/components/footer/footer.component.html
+++ b/greenly/src/app/components/footer/footer.component.html
@@ -1,38 +1,71 @@
-<footer class="bg-main-light py-5">
-    <div class="container">
-      <h2 class="m-0 h4">Get The Greenly App</h2>
-      <p class="text-muted small">
-        We Will Send You a Link, Open it on Your Phone to download the app
-      </p>
-  
-      <!-- inputs design  -->
-      <div class="d-flex align-items-center gap-3 text-nowrap">
-        <input type="text" class="form-control" placeholder="Email" />
-        <button class="btn-main">Share App Link</button>
+<footer class="bg-main pt-5 pb-3">
+  <div class="container text-white">
+    <div class="row d-flex justify-content-between align-items-start">
+      <div class="col-md-4 left-content">
+      <h1 class="fs-3 w-75 special-font">Greenly</h1>
+      <div>
+        <h2 class="fs-6">Helwan University, Helwan, Cairo, Egypt</h2>
+        <h3 class="fs-6 w-50">Greenly&#64;graduation.com +1 (234) 567-8900</h3>
       </div>
-  
-      <hr />
-  
-      <!-- footer payment Details Design  -->
-      <div class="pay-details d-flex justify-content-between align-items-center">
-        <div class="d-flex align-items-center gap-2">
-          <h3 class="h6 m-0">Payment partners</h3>
-          <img src="./assets/amazon-pay.png" width="30px" alt="" />
-          <img
-            src="./assets/American-Express-Color.png"
-            width="30px"
-            alt=""
-          />
-          <img src="./assets/paypal.png" width="30px" alt="" />
-          <img src="./assets/mastercard.webp" width="30px" alt="" />
-        </div>
-  
-        <div class="d-flex align-items-center gap-2">
-          <h3 class="h6 m-0">Get Deliveries with Greenly</h3>
-          <img src="./assets/get-google-play.png" width="75px" alt="" />
-          <img src="./assets/get-apple-store.png" width="75px" alt="" />
+      <div>
+        <span class="mb-2 d-block">We accept</span>
+        <div class="d-flex justify-content-center align-items-center w-75">
+          <div>
+            <img src="./assets/paypal-140_svgrepo.com.png" alt="paypal">
+          </div>
+          <div>
+            <img src="./assets/visa-classic_svgrepo.com.png" alt="paypal">
+
+          </div>
+          <div>
+            <img src="./assets/master-card-logo_svgrepo.com.png" alt="paypal">
+
+          </div>
         </div>
       </div>
     </div>
-  </footer>
-  
+    <div class="col-md-4 middile-content d-flex justify-content-start align-items-center gap-3">
+      <div class="d-flex flex-column">
+        <h2 class="fs-5 special-font">Who we serve </h2>
+        <a class="text-decoration-none">Agricultural field</a>
+        <a class="text-decoration-none">Car owners</a>
+        <a class="text-decoration-none">Factories</a>
+        <a class="text-decoration-none">Home Owners</a>
+      </div>
+      <div class="d-flex flex-column">
+        <h2 class="fs-5 special-font">Our Services</h2>
+        <a class="text-decoration-none">Agricultural Loans</a>
+        <a class="text-decoration-none">Apiary Licences</a>
+        <a class="text-decoration-none">Blog</a>
+        <a class="text-decoration-none">Home Owners</a>
+      </div>
+    </div>
+    <div class="col-md-4 right-content">
+      <h2 class="fs-5">Connect</h2>
+      <div class="d-flex justify-content-center align-items-center">
+        <div>
+          <img src="./assets/Social Icons-1.png" alt="">
+        </div>
+        <div>
+          <img src="./assets/Social Icons.png" alt="">
+        </div>
+        <div>
+          <img src="./assets/Social Icons-3.png" alt="">
+        </div>
+        <div>
+          <img src="./assets/X.png" alt="">
+        </div>
+      </div>
+      <div class="mt-5">
+        <button class="learn-more">
+          <span class="circle" aria-hidden="true">
+            <span class="icon arrow"></span>
+          </span>
+          <span class="button-text">Get Started</span>
+        </button>
+      </div>
+    </div>
+    </div>
+    <p class="text-center mt-2"><span class="fw-bold">Designed With Care</span> © 2025 Greenly. All rights reserved.</p>
+  </div>
+</footer>
